# hpc-smith-waterman

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
scripts/: cleanup-dataset  download-dataset  prepare-prebuilt-bins  zip
src/: fasta.rs  main.rs  metrics.rs  model.rs
src/engine/: constants.rs  diagonal.rs  mod.rs  naive.rs  opencl.rs  opencl_diagonal.cl  opencl_diagonal.rs  opencl_naive.cl  opencl_naive.rs  optimized_diagonal.rs  optimized_opencl_diagonal.cl  optimized_opencl_diagonal.rs  program.cl
src/utils/: assert.rs  format.rs  mod.rs  slice.rs
